--- a/compat/k9s/plugins.yaml
+++ b/compat/k9s/plugins.yaml
@@ -1,6 +1,6 @@
 plugins:
   loog-run-selected:
-    shortCut: Shift-L
+    shortCut: o
     confirm: false
     scopes:
       - all
@@ -10,7 +10,7 @@ plugins:
     args:
       - -c
       - >
-        loogtui
+        loog
         -resource
         $RESOURCE_GROUP/$RESOURCE_VERSION/$RESOURCE_NAME
         -filter-expr
@@ -26,7 +26,7 @@ plugins:
     args:
       - -c
       - >
-        loogtui
+        loog
         -resource
         $RESOURCE_GROUP/$RESOURCE_VERSION/$RESOURCE_NAME
         -filter-expr
