--- a/compat/k9s/plugins.yaml
+++ b/compat/k9s/plugins.yaml
@@ -1,6 +1,6 @@
 plugins:
   loog-run-selected:
-    shortCut: Shift-L
+    shortCut: Ctrl-Y
     confirm: false
     scopes:
       - all
@@ -10,13 +10,13 @@ plugins:
     args:
       - -c
       - >
-        loogtui
+        loog
         -resource
         $RESOURCE_GROUP/$RESOURCE_VERSION/$RESOURCE_NAME
         -filter-expr
         'Namespaced("$NAMESPACE", "$NAME")'
   loog-run-namespace:
-    shortCut: Ctrl-L
+    shortCut: Shift-Y
     confirm: true
     scopes:
       - all
@@ -26,7 +26,7 @@ plugins:
     args:
       - -c
       - >
-        loogtui
+        loog
         -resource
         $RESOURCE_GROUP/$RESOURCE_VERSION/$RESOURCE_NAME
         -filter-expr
